robotic-codes/src/test/test_zeropads.txt
test_zeropads.cpp: In function ‘int main()’:
test_zeropads.cpp:8:12: error: expected initializer before ‘s1’
   string s s1;
            ^~
test_zeropads.cpp:9:3: error: ‘s’ was not declared in this scope
   s = "hello"
   ^
test_zeropads.cpp:12:10: error: ‘num’ was not declared in this scope
   cin >> num;
          ^~~
test_zeropads.cpp:12:10: note: suggested alternative: ‘enum’
   cin >> num;
          ^~~
          enum
test_zeropads.cpp:14:3: error: expected ‘;’ before ‘cin’
   cin >> s;
   ^~~
test_zeropads.cpp:15:3: error: ‘s1’ was not declared in this scope
   s1 = zero_pads(s, num);
   ^~
test_zeropads.cpp:15:8: error: ‘zero_pads’ was not declared in this scope
   s1 = zero_pads(s, num);
        ^~~~~~~~~
